<resources>
    <string name="app_name">PostX</string>
    <string name="bg_color">Background Color</string>
    <string name="text_color">Text Color</string>
    <string name="text_family">Text Style</string>
    <string name="text_alignment">Text Alignment</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="sansser">Sans Serif</string>
    <string name="casual">Monospace</string>
    <string name="capcond">Serif</string>
    <string name="maintext">Your text</string>
    <string name="enterurl">Background url</string>
    <string name="bottomtext">Bottom text</string>
    <string name="generate">Generate Post</string>
    <string name="middletexthint">Text in the middle</string>
    <string name="urltexthint">Enter an image url</string>
    <string name="bottomtexthint">Text in the bottom right (optional)</string>
    <string name="leftalign">Left</string>
    <string name="centeralign">Center</string>
    <string name="rightalign">Right</string>
    <string name="fontsize">Font Size (Default 22)</string>
    <string name="update">Update</string>
    <string name="share">Share Post</string>
    <string name="fb_app_id">534723036889189</string>
    <string name="red">Red:</string>
    <string name="green">Green:</string>
    <string name="blue">Blue:</string>
    <string name="twitter_post">Twitter Post</string>
    <string name="text_post">Text Post</string>
    <string name="postx_temp_logo">PostX\'s temporary logo for load_templates screen</string>
    <string name="spaced_app_name">P O S T X</string>
    <string name="dank_irfan_meme_base_image">dank irfan meme\'s base image</string>
    <string name="enter_text">Enter Text</string>
    <string name="switch_dank_irfan_base_image">SWITCH IRFAN IMAGE</string>
    <string name="text_post_background_image">Text post\'s background image</string>
    <string name="choose_background_image">Choose Background Image</string>
    <string name="dank_irfan">Dank Irfan</string>
    <string name="splash_screen_logo">Practikality\'s splash screen logo</string>
    <string name="tweet_default_font">Font Size (Default 16)</string>
    <string name="name">Name</string>
    <string name="tweet_verified_blue_tick">twitter blue tick for verified account</string>
    <string name="username">Username</string>
    <string name="caption">Caption</string>
    <string name="tweet_follow_button">twitter follow button</string>
    <string name="tweet_optional_image">Optional image to add to tweet</string>
    <string name="tweet_post_icons">tweet icons at bottom of post</string>
    <string name="tweet_add_image">ADD IMAGE TO TWEET</string>
    <string name="hashtags_seperated">Hashtags (seprated by space)</string>
    <string name="hashtags_if_any">Hashtags (if any)</string>
    <string name="generate_twitter_post">GENERATE TWITTER POST</string>
    <string-array name="font_options">
        <item>Sans Serif</item>
        <item>Raleway</item>
        <item>Coolvetica</item>
        <item>Oswald</item>
        <item>Monospace</item>
        <item>Caviar Dreams</item>
        <item>Helvetica</item>
        <item>Honey Script</item>
        <item>Vaguely Repulsive</item>
    </string-array>
</resources>
