<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.esy.practikality.post_x.TwitterActivity">

    <TextView
        android:id="@+id/postx_tweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/spaced_app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tweet_font_size"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="#90CAF9"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:hint="@string/tweet_default_font"
        android:inputType="number"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textSize="15sp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:background="#0D47A1"
        android:onClick="adjustSize"
        android:text="@string/update"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/tweet_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tweet_font_size"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/twitter_post_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture_of_tweet"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:focusable="true"
                android:onClick="add_profile_image"
                android:scaleType="centerCrop"
                android:src="@drawable/default_user_icon" />

            <TextView
                android:id="@+id/tweet_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@id/profile_picture_of_tweet"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/name"
                android:textColor="#000"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_toEndOf="@id/tweet_fullname"
                android:background="@drawable/twitter_verified_blue_tick"
                android:contentDescription="@string/tweet_verified_blue_tick" />

            <TextView
                android:id="@+id/tweet_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tweet_fullname"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@id/profile_picture_of_tweet"
                android:text="@string/username"
                android:textColor="#bdbdbd"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tweet_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tweet_username"
                android:layout_marginTop="7dp"
                android:ems="10"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/caption"
                android:textColor="#000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/tweet_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/tweet_caption"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/tweet_optional_image"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <TextView
                android:id="@+id/hashtags_in_tweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tweet_image"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:textColor="#43a6f5"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/tweet_follow_button"
                android:src="@drawable/twitter_follow_btn" />

        </RelativeLayout>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="22dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/tweet_post_icons"
            android:src="@drawable/twitter_post_icons" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/share_twitter_post"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:background="#42A5F5"
        android:fontFamily="sans-serif-condensed"
        android:onClick="add_tweet_image"
        android:paddingEnd="60dp"
        android:paddingStart="60dp"
        android:text="@string/tweet_add_image"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/share_twitter_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="#0D47A1"
        android:onClick="share"
        android:paddingEnd="50dp"
        android:paddingStart="50dp"
        android:text="@string/share"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>