<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.esy.practikality.post_x.GeneratePost">

    <TextView
        android:id="@+id/postx_text_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/spaced_app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/text_post_font_size"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:background="#90CAF9"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:hint="@string/fontsize"
        android:inputType="number"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textSize="15sp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="70dp"
        android:background="#0D47A1"
        android:onClick="update_font_size"
        android:text="@string/update"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/main_text_post_body"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:layout_below="@id/text_post_font_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/text_post_image_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/text_post_background_image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/text_post_main_text"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="-10dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/text_post_bottom_right_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/main_text_post_body"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="12dp"
                android:background="#42A5F5"
                android:fontFamily="sans-serif-condensed"
                android:onClick="choose_image"
                android:paddingEnd="40dp"
                android:paddingStart="40dp"
                android:text="@string/choose_background_image"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/share_text_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="17dp"
                android:background="#0D47A1"
                android:onClick="share"
                android:paddingEnd="50dp"
                android:paddingStart="50dp"
                android:text="@string/share"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
